--- a/part2/puhelinluettelo/src/App.css
+++ b/part2/puhelinluettelo/src/App.css
@@ -56,3 +56,13 @@
   padding: 10px;
   margin-bottom: 10px;
 }
+
+.nameError {
+  color: red;
+  background: lightgrey;
+  font-size: 20px;
+  border-style: solid;
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
